--- a/404.html
+++ b/404.html
@@ -41,54 +41,23 @@
 			<div class="header__menu">
 				<ul class="header__nav">
 					<li class="header__nav-item">
-						<a class="header__nav-link" href="#" role="button" id="dropdownMenuHome" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Home <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M17,9.17a1,1,0,0,0-1.41,0L12,12.71,8.46,9.17a1,1,0,0,0-1.41,0,1,1,0,0,0,0,1.42l4.24,4.24a1,1,0,0,0,1.42,0L17,10.59A1,1,0,0,0,17,9.17Z"/></svg></a>
-
-						<ul class="dropdown-menu header__nav-menu" aria-labelledby="dropdownMenuHome">
-							<li><a href="index.html">Home style 1</a></li>
-							<li><a href="index2.html">Home style 2</a></li>
-							<li><a href="index3.html">Home style 3</a></li>
-						</ul>
-					</li>
-					<li class="header__nav-item">
-						<a class="header__nav-link" href="#" role="button" id="dropdownMenu" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Explore <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M17,9.17a1,1,0,0,0-1.41,0L12,12.71,8.46,9.17a1,1,0,0,0-1.41,0,1,1,0,0,0,0,1.42l4.24,4.24a1,1,0,0,0,1.42,0L17,10.59A1,1,0,0,0,17,9.17Z"/></svg></a>
-
-						<ul class="dropdown-menu header__nav-menu" aria-labelledby="dropdownMenu">
-							<li><a href="explore.html">Explore style 1</a></li>
-							<li><a href="explore2.html">Explore style 2</a></li>
-							<li><a href="explore3.html">Explore style 3</a></li>
-							<li><a href="item.html">Item style 1</a></li>
-							<li><a href="item2.html">Item style 2</a></li>
-						</ul>
+						<a class="header__nav-link" href="explore.html" role="button" >Explore </a>
 					</li>
 					<li class="header__nav-item">
 						<a href="activity.html" class="header__nav-link">Activity</a>
 					</li>
 					<li class="header__nav-item">
-						<a class="header__nav-link" href="#" role="button" id="dropdownMenu0" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Community <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M17,9.17a1,1,0,0,0-1.41,0L12,12.71,8.46,9.17a1,1,0,0,0-1.41,0,1,1,0,0,0,0,1.42l4.24,4.24a1,1,0,0,0,1.42,0L17,10.59A1,1,0,0,0,17,9.17Z"/></svg></a>
-
-						<ul class="dropdown-menu header__nav-menu" aria-labelledby="dropdownMenu0">
-							<li><a href="token.html">Unifund</a></li>
-							<li class="dropdown-submenu">
-								<a class="dropdown-item" href="#" role="button" id="dropdownMenuSub" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Blog <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M17,9.17a1,1,0,0,0-1.41,0L12,12.71,8.46,9.17a1,1,0,0,0-1.41,0,1,1,0,0,0,0,1.42l4.24,4.24a1,1,0,0,0,1.42,0L17,10.59A1,1,0,0,0,17,9.17Z"/></svg></a>
-
-								<ul class="dropdown-menu header__nav-menu" aria-labelledby="dropdownMenuSub">
-									<li><a href="blog.html">Blog style 1</a></li>
-									<li><a href="blog2.html">Blog style 2</a></li>
-									<li><a href="article.html">Article</a></li>
-								</ul>
-							</li>
-							<li><a href="faq.html">Help center</a></li>
-							<li><a href="contacts.html">Contacts</a></li>
-						</ul>
+						<a href="launch.html" class="header__nav-link">Launch</a>
 					</li>
 					<li class="header__nav-item">
 						<a class="header__nav-link" href="#" role="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Pages <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M17,9.17a1,1,0,0,0-1.41,0L12,12.71,8.46,9.17a1,1,0,0,0-1.41,0,1,1,0,0,0,0,1.42l4.24,4.24a1,1,0,0,0,1.42,0L17,10.59A1,1,0,0,0,17,9.17Z"/></svg></a>
 
 						<ul class="dropdown-menu header__nav-menu" aria-labelledby="dropdownMenu1">
-							<li><a href="authors.html">Authors</a></li>
+							<li><a href="founders.html">Founder</a></li>
+							<li><a href="backers.html">Backers</a></li>
 							<li><a href="author.html">Author</a></li>
 							<li><a href="collection.html">Collection</a></li>
-							<li><a href="create.html">Create</a></li>
+							<li><a href="launch.html">Launch</a></li>
 						</ul>
 					</li>
 					<li class="header__nav-item">
