--- a/index1.html
+++ b/index1.html
@@ -50,7 +50,7 @@
 						<a class="header__nav-link" href="#" role="button" id="dropdownMenu0" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Community <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M17,9.17a1,1,0,0,0-1.41,0L12,12.71,8.46,9.17a1,1,0,0,0-1.41,0,1,1,0,0,0,0,1.42l4.24,4.24a1,1,0,0,0,1.42,0L17,10.59A1,1,0,0,0,17,9.17Z"/></svg></a>
 
 						<ul class="dropdown-menu header__nav-menu" aria-labelledby="dropdownMenu0">
-							<li><a href="token.html">Unifund</a></li>
+							<li><a href="UNI.html">Unifund</a></li>
 							<li class="dropdown-submenu">
 								<a class="dropdown-item" href="#" role="button" id="dropdownMenuSub" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Blog <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M17,9.17a1,1,0,0,0-1.41,0L12,12.71,8.46,9.17a1,1,0,0,0-1.41,0,1,1,0,0,0,0,1.42l4.24,4.24a1,1,0,0,0,1.42,0L17,10.59A1,1,0,0,0,17,9.17Z"/></svg></a>
 
@@ -97,7 +97,7 @@
 				<div class="header__action header__action--profile">
 					<a class="header__profile-btn header__profile-btn--verified" href="#" role="button" id="dropdownMenuProfile" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
 						<img src="img/avatars/avatar5.jpg" alt="">
-						<div><p>John Doe</p>
+						<div><p>Justin King</p>
 						<span>784.89 ETH</span></div>
 						<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M17,9.17a1,1,0,0,0-1.41,0L12,12.71,8.46,9.17a1,1,0,0,0-1.41,0,1,1,0,0,0,0,1.42l4.24,4.24a1,1,0,0,0,1.42,0L17,10.59A1,1,0,0,0,17,9.17Z"></path></svg>
 					</a>
@@ -130,7 +130,7 @@
 					<div class="col-12">
 						<div class="home__content">
 							<h1 class="home__title">The largest Contract marketplace</h1>
-							<p class="home__text">Digital marketplace for crypto collectibles and non-fungible tokens. <br>Buy, sell, and discover Contract Titles.</p>
+							<p class="home__text">Digital marketplace for crypto collectibles and non-fungible UNIs. <br>Buy, sell, and discover Contract Titles.</p>
 
 							<div class="home__btns">
 								<a href="explore.html" class="home__btn home__btn--clr">Explore</a>
@@ -743,7 +743,7 @@
 									<a href="author.html" class="collection__avatar">
 										<img src="img/avatars/avatar11.jpg" alt="">
 									</a>
-									<h3 class="collection__name"><a href="collection.html">Clap Token</a></h3>
+									<h3 class="collection__name"><a href="collection.html">Clap UNI</a></h3>
 									<span class="collection__number">ERC-1155</span>
 								</div>
 							</div>
@@ -831,7 +831,7 @@
 					<div class="footer__logo">
 						<img src="img/logo.svg" alt="">
 					</div> 
-					<p class="footer__tagline">Digital marketplace for crypto collectibles <br>and non-fungible tokens (Contracts). <br>Buy, sell, and discover Contract Titles.</p>
+					<p class="footer__tagline">Digital marketplace for crypto collectibles <br>and non-fungible UNIs (Contracts). <br>Buy, sell, and discover Contract Titles.</p>
 
 					<div class="footer__lang">
 						<a class="footer__lang-btn" href="#" role="button" id="dropdownLang" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -886,7 +886,7 @@
 				<div class="col-6 col-md-4 col-lg-3 col-xl-2 order-2 order-lg-3 order-md-4 order-xl-4">
 					<h6 class="footer__title">Community</h6>
 					<div class="footer__nav">
-						<a href="token.html">Unifund</a>
+						<a href="UNI.html">Unifund</a>
 						<a href="blog.html">Our Blog</a>
 						<a href="faq.html">Help Center</a>
 						<a href="contacts.html">Contacts</a>
