--- a/index2.html
+++ b/index2.html
@@ -50,7 +50,7 @@
 						<a class="header__nav-link" href="#" role="button" id="dropdownMenu0" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Community <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M17,9.17a1,1,0,0,0-1.41,0L12,12.71,8.46,9.17a1,1,0,0,0-1.41,0,1,1,0,0,0,0,1.42l4.24,4.24a1,1,0,0,0,1.42,0L17,10.59A1,1,0,0,0,17,9.17Z"/></svg></a>
 
 						<ul class="dropdown-menu header__nav-menu" aria-labelledby="dropdownMenu0">
-							<li><a href="token.html">Unifund</a></li>
+							<li><a href="UNI.html">Unifund</a></li>
 							<li class="dropdown-submenu">
 								<a class="dropdown-item" href="#" role="button" id="dropdownMenuSub" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Blog <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M17,9.17a1,1,0,0,0-1.41,0L12,12.71,8.46,9.17a1,1,0,0,0-1.41,0,1,1,0,0,0,0,1.42l4.24,4.24a1,1,0,0,0,1.42,0L17,10.59A1,1,0,0,0,17,9.17Z"/></svg></a>
 
@@ -120,7 +120,7 @@
 					<div class="col-12">
 						<div class="home__content home__content--center">
 							<h1 class="home__title">Discover, collect, and sell <br>extraordinary <span><b>Contracts</b></span></h1>
-							<p class="home__text">Digital marketplace for crypto collectibles and non-fungible tokens.</p>
+							<p class="home__text">Digital marketplace for crypto collectibles and non-fungible UNIs.</p>
 
 							<div class="home__btns">
 								<a href="explore.html" class="home__btn home__btn--clr">Explore</a>
@@ -883,7 +883,7 @@
 					<div class="footer__logo">
 						<img src="img/logo.svg" alt="">
 					</div> 
-					<p class="footer__tagline">Digital marketplace for crypto collectibles <br>and non-fungible tokens (Contracts). <br>Buy, sell, and discover Contract Titles.</p>
+					<p class="footer__tagline">Digital marketplace for crypto collectibles <br>and non-fungible UNIs (Contracts). <br>Buy, sell, and discover Contract Titles.</p>
 
 					<div class="footer__lang">
 						<a class="footer__lang-btn" href="#" role="button" id="dropdownLang" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -938,7 +938,7 @@
 				<div class="col-6 col-md-4 col-lg-3 col-xl-2 order-2 order-lg-3 order-md-4 order-xl-4">
 					<h6 class="footer__title">Community</h6>
 					<div class="footer__nav">
-						<a href="token.html">Unifund</a>
+						<a href="UNI.html">Unifund</a>
 						<a href="blog.html">Our Blog</a>
 						<a href="faq.html">Help Center</a>
 						<a href="contacts.html">Contacts</a>
