--- a/item.html
+++ b/item.html
@@ -47,22 +47,7 @@
 						<a href="activity.html" class="header__nav-link">Activity</a>
 					</li>
 					<li class="header__nav-item">
-						<a class="header__nav-link" href="#" role="button" id="dropdownMenu0" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Community <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M17,9.17a1,1,0,0,0-1.41,0L12,12.71,8.46,9.17a1,1,0,0,0-1.41,0,1,1,0,0,0,0,1.42l4.24,4.24a1,1,0,0,0,1.42,0L17,10.59A1,1,0,0,0,17,9.17Z"/></svg></a>
-
-						<ul class="dropdown-menu header__nav-menu" aria-labelledby="dropdownMenu0">
-							<li><a href="token.html">Unifund</a></li>
-							<li class="dropdown-submenu">
-								<a class="dropdown-item" href="#" role="button" id="dropdownMenuSub" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Blog <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M17,9.17a1,1,0,0,0-1.41,0L12,12.71,8.46,9.17a1,1,0,0,0-1.41,0,1,1,0,0,0,0,1.42l4.24,4.24a1,1,0,0,0,1.42,0L17,10.59A1,1,0,0,0,17,9.17Z"/></svg></a>
-
-								<ul class="dropdown-menu header__nav-menu" aria-labelledby="dropdownMenuSub">
-									<li><a href="blog.html">Blog style 1</a></li>
-									<li><a href="blog2.html">Blog style 2</a></li>
-									<li><a href="article.html">Article</a></li>
-								</ul>
-							</li>
-							<li><a href="faq.html">Help center</a></li>
-							<li><a href="contacts.html">Contacts</a></li>
-						</ul>
+						<a href="launch.html" class="header__nav-link">Launch</a>
 					</li>
 					<li class="header__nav-item">
 						<a class="header__nav-link" href="#" role="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Pages <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M17,9.17a1,1,0,0,0-1.41,0L12,12.71,8.46,9.17a1,1,0,0,0-1.41,0,1,1,0,0,0,0,1.42l4.24,4.24a1,1,0,0,0,1.42,0L17,10.59A1,1,0,0,0,17,9.17Z"/></svg></a>
@@ -186,7 +171,7 @@
 						<!-- tabs -->
 						<ul class="nav nav-tabs asset__tabs" role="tablist">
 							<li class="nav-item">
-								<a class="nav-link active" data-toggle="tab" href="#tab-1" role="tab" aria-controls="tab-1" aria-selected="true">History</a>
+								<a class="nav-link active" data-toggle="tab" href="#tab-1" role="tab" aria-controls="tab-1" aria-selected="true">Details</a>
 							</li>
 
 							<li class="nav-item">
@@ -195,12 +180,51 @@
 
 
 							<li class="nav-item">
-								<a class="nav-link" data-toggle="tab" href="#tab-3" role="tab" aria-controls="tab-3" aria-selected="false">Details</a>
+								<a class="nav-link" data-toggle="tab" href="#tab-3" role="tab" aria-controls="tab-3" aria-selected="false">History</a>
 							</li>
 						</ul>
 
 						<div class="tab-content">
 							<div class="tab-pane fade show active" id="tab-1" role="tabpanel">
+								<ul class="asset__authors asset__authors--tab">
+									<li>
+										<span>Owner</span>
+										<div class="asset__author asset__author--verified">
+											<img src="img/avatars/avatar5.jpg" alt="">
+											<a href="author.html">@midinh</a>
+										</div>
+									</li>
+									<li>
+										<span>Year created</span>
+										<p>2021</p>
+									</li>
+									<li>
+										<span>Goal</span>
+										<p>$150,000</p>
+									</li>
+									<li>
+										<span>Reward</span>
+										<p>Limited Edition Item</p>
+									</li>
+									<li>
+										<span>Voting Rights</span>
+										<p>Yes</p>
+									</li>
+									<li>
+										<span>Royalties</span>
+										<p>5%</p>
+									</li>
+									<li>
+										<span>Equity</span>
+										<p>5%</p>
+									</li>
+									<li>
+										<span>Rewards</span>
+										<p>5%</p>
+									</li>
+								</ul>
+							</div>
+							<div class="tab-pane fade" id="tab-2" role="tabpanel">
 								<div class="asset__actions asset__actions--scroll" id="asset__actions--scroll">
 									<div class="asset__action asset__action--verified">
 										<img src="img/avatars/avatar10.jpg" alt="">
@@ -229,7 +253,7 @@
 								</div>
 							</div>
 
-							<div class="tab-pane fade" id="tab-2" role="tabpanel">
+							<div class="tab-pane fade" id="tab-3" role="tabpanel">
 								<div class="asset__actions">
 									<div class="asset__action asset__action--verified">
 										<img src="img/avatars/avatar10.jpg" alt="">
@@ -248,21 +272,7 @@
 								</div>
 							</div>
 
-							<div class="tab-pane fade" id="tab-3" role="tabpanel">
-								<ul class="asset__authors asset__authors--tab">
-									<li>
-										<span>Owner</span>
-										<div class="asset__author asset__author--verified">
-											<img src="img/avatars/avatar5.jpg" alt="">
-											<a href="author.html">@midinh</a>
-										</div>
-									</li>
-									<li>
-										<span>Year created</span>
-										<p>2021</p>
-									</li>
-								</ul>
-							</div>
+
 						</div>
 						<!-- end tabs -->
 
