--- a/article.html
+++ b/article.html
@@ -47,22 +47,7 @@
 						<a href="activity.html" class="header__nav-link">Activity</a>
 					</li>
 					<li class="header__nav-item">
-						<a class="header__nav-link" href="#" role="button" id="dropdownMenu0" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Community <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M17,9.17a1,1,0,0,0-1.41,0L12,12.71,8.46,9.17a1,1,0,0,0-1.41,0,1,1,0,0,0,0,1.42l4.24,4.24a1,1,0,0,0,1.42,0L17,10.59A1,1,0,0,0,17,9.17Z"/></svg></a>
-
-						<ul class="dropdown-menu header__nav-menu" aria-labelledby="dropdownMenu0">
-							<li><a href="token.html">Unifund</a></li>
-							<li class="dropdown-submenu">
-								<a class="dropdown-item" href="#" role="button" id="dropdownMenuSub" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Blog <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M17,9.17a1,1,0,0,0-1.41,0L12,12.71,8.46,9.17a1,1,0,0,0-1.41,0,1,1,0,0,0,0,1.42l4.24,4.24a1,1,0,0,0,1.42,0L17,10.59A1,1,0,0,0,17,9.17Z"/></svg></a>
-
-								<ul class="dropdown-menu header__nav-menu" aria-labelledby="dropdownMenuSub">
-									<li><a href="blog.html">Blog style 1</a></li>
-									<li><a href="blog2.html">Blog style 2</a></li>
-									<li><a href="article.html">Article</a></li>
-								</ul>
-							</li>
-							<li><a href="faq.html">Help center</a></li>
-							<li><a href="contacts.html">Contacts</a></li>
-						</ul>
+						<a href="launch.html" class="header__nav-link">Launch</a>
 					</li>
 					<li class="header__nav-item">
 						<a class="header__nav-link" href="#" role="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Pages <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M17,9.17a1,1,0,0,0-1.41,0L12,12.71,8.46,9.17a1,1,0,0,0-1.41,0,1,1,0,0,0,0,1.42l4.24,4.24a1,1,0,0,0,1.42,0L17,10.59A1,1,0,0,0,17,9.17Z"/></svg></a>
@@ -198,7 +183,7 @@
 								<li class="comments__item">
 									<div class="comments__autor">
 										<img class="comments__avatar" src="img/avatar.svg" alt="">
-										<span class="comments__name">John Doe</span>
+										<span class="comments__name">Justin King</span>
 										<span class="comments__time">30.08.2021, 17:53</span>
 									</div>
 									<p class="comments__text">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. If you are going to use a passage of Lorem Ipsum, you need to be sure there isn't anything embarrassing hidden in the middle of text.</p>
@@ -217,7 +202,7 @@
 								<li class="comments__item comments__item--answer">
 									<div class="comments__autor">
 										<img class="comments__avatar" src="img/avatar.svg" alt="">
-										<span class="comments__name">John Doe</span>
+										<span class="comments__name">Justin King</span>
 										<span class="comments__time">24.08.2021, 16:41</span>
 									</div>
 									<p class="comments__text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
@@ -236,7 +221,7 @@
 								<li class="comments__item comments__item--quote">
 									<div class="comments__autor">
 										<img class="comments__avatar" src="img/avatar.svg" alt="">
-										<span class="comments__name">John Doe</span>
+										<span class="comments__name">Justin King</span>
 										<span class="comments__time">11.08.2021, 11:11</span>
 									</div>
 									<p class="comments__text"><span>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable.</span>It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
@@ -255,7 +240,7 @@
 								<li class="comments__item">
 									<div class="comments__autor">
 										<img class="comments__avatar" src="img/avatar.svg" alt="">
-										<span class="comments__name">John Doe</span>
+										<span class="comments__name">Justin King</span>
 										<span class="comments__time">07.08.2021, 14:33</span>
 									</div>
 									<p class="comments__text">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. If you are going to use a passage of Lorem Ipsum, you need to be sure there isn't anything embarrassing hidden in the middle of text.</p>
@@ -274,7 +259,7 @@
 								<li class="comments__item">
 									<div class="comments__autor">
 										<img class="comments__avatar" src="img/avatar.svg" alt="">
-										<span class="comments__name">John Doe</span>
+										<span class="comments__name">Justin King</span>
 										<span class="comments__time">02.08.2021, 15:24</span>
 									</div>
 									<p class="comments__text">Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover many web sites still in their infancy. Various versions have evolved over the years, sometimes by accident, sometimes on purpose (injected humour and the like).</p>
