--- a/backers.html
+++ b/backers.html
@@ -47,22 +47,7 @@
 						<a href="activity.html" class="header__nav-link">Activity</a>
 					</li>
 					<li class="header__nav-item">
-						<a class="header__nav-link" href="#" role="button" id="dropdownMenu0" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Community <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M17,9.17a1,1,0,0,0-1.41,0L12,12.71,8.46,9.17a1,1,0,0,0-1.41,0,1,1,0,0,0,0,1.42l4.24,4.24a1,1,0,0,0,1.42,0L17,10.59A1,1,0,0,0,17,9.17Z"/></svg></a>
-
-						<ul class="dropdown-menu header__nav-menu" aria-labelledby="dropdownMenu0">
-							<li><a href="token.html">Unifund</a></li>
-							<li class="dropdown-submenu">
-								<a class="dropdown-item" href="#" role="button" id="dropdownMenuSub" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Blog <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M17,9.17a1,1,0,0,0-1.41,0L12,12.71,8.46,9.17a1,1,0,0,0-1.41,0,1,1,0,0,0,0,1.42l4.24,4.24a1,1,0,0,0,1.42,0L17,10.59A1,1,0,0,0,17,9.17Z"/></svg></a>
-
-								<ul class="dropdown-menu header__nav-menu" aria-labelledby="dropdownMenuSub">
-									<li><a href="blog.html">Blog style 1</a></li>
-									<li><a href="blog2.html">Blog style 2</a></li>
-									<li><a href="article.html">Article</a></li>
-								</ul>
-							</li>
-							<li><a href="faq.html">Help center</a></li>
-							<li><a href="contacts.html">Contacts</a></li>
-						</ul>
+						<a href="launch.html" class="header__nav-link">Launch</a>
 					</li>
 					<li class="header__nav-item">
 						<a class="header__nav-link" href="#" role="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Pages <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M17,9.17a1,1,0,0,0-1.41,0L12,12.71,8.46,9.17a1,1,0,0,0-1.41,0,1,1,0,0,0,0,1.42l4.24,4.24a1,1,0,0,0,1.42,0L17,10.59A1,1,0,0,0,17,9.17Z"/></svg></a>
