--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
 	<!-- Favicons -->
 	<link rel="icon" type="image/png" href="icon/favicon-32x32.png" sizes="32x32">
 	<link rel="apple-touch-icon" href="icon/favicon-32x32.png">
-
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600&display=swap" rel="stylesheet">
 	<meta name="description" content="">
 	<meta name="keywords" content="">
 	<meta name="author" content="Dmitry Volkov">
@@ -113,7 +115,7 @@
 			<div class="row">
 					<div class="col-12">
 						<div class="hero owl-carousel" id="hero">
-							<div class="hero__slide" data-bg="img/home/slide1.jpg">
+							<div class="hero__slide" data-bg="img/home/slide1.jpg">	
 								<div class="container">
 									<h1 class="hero__title"> TangibleHouse</h1>
 									<p class="hero__text">We sell curated essentials for your kitchen & home inspired by our world adventures. We are offering 10% return on early backers of our shop. </p>
