--- a/index.html
+++ b/index.html
@@ -119,6 +119,9 @@
 								<div class="container">
 									<h1 class="hero__title"> TangibleHouse</h1>
 									<p class="hero__text">We sell curated essentials for your kitchen & home inspired by our world adventures. We are offering 10% return on early backers of our shop. </p>
+									<h2 class="hero__reserve">Reserve Price</h2>
+									<h3 class="hero__price"> 3.22 UNI</h3>
+									<h2 class="hero__value">$1,798</h2>
 									<div class="hero__btns">
 										<a href="item2.html" class="hero__btn hero__btn--clr">More details</a>
 										<a href="item2.html" class="hero__btn">Place a bid</a>
@@ -130,6 +133,9 @@
 								<div class="container">
 									<h2 class="hero__title"> Campfire Pictures</h2>
 									<p class="hero__text">Securely buy and sell unique digital collectibles. <br>Lowest transaction costs across all Contract markets guaranteed.</p>
+									<h2 class="hero__reserve">Reserve Price</h2>
+									<h3 class="hero__price"> 2.98 UNI</h3>
+									<h2 class="hero__value">$1,798</h2>
 									<div class="hero__btns">
 										<a href="explore.html" class="hero__btn hero__btn--clr">Explore</a>
 										<a href="signin.html" class="hero__btn">Create</a>
@@ -141,6 +147,9 @@
 								<div class="container">
 									<h2 class="hero__title"> Anivive Lifesciences</h2>
 									<p class="hero__text">With intelligent software we developed a groundbreaking treatment for canine lymphoma. We are offering profit sharing on our recent drug.</p>
+									<h2 class="hero__reserve">Reserve Price</h2>
+									<h3 class="hero__price"> 3.58 UNI</h3>
+									<h2 class="hero__value">$1,798</h2>
 									<div class="hero__btns">
 										<a href="explore.html" class="hero__btn hero__btn--clr">Explore</a>
 										<a href="signin.html" class="hero__btn">Create</a>
