--- a/author.html
+++ b/author.html
@@ -143,7 +143,7 @@
 						<!-- tabs nav -->
 						<ul class="nav nav-tabs profile__tabs" id="profile__tabs" role="tablist">
 							<li class="nav-item">
-								<a class="nav-link active" data-toggle="tab" href="#tab-1" role="tab" aria-controls="tab-1" aria-selected="true">On Sale</a>
+								<a class="nav-link active" data-toggle="tab" href="#tab-1" role="tab" aria-controls="tab-1" aria-selected="true">Backed</a>
 							</li>
 
 							<li class="nav-item">
